2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/totem.ui:
	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_realize), (bacon_video_widget_unrealize),
	(bacon_video_widget_set_fullscreen), (bacon_video_widget_new):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_realize), (bacon_video_widget_unrealize),
	(bacon_video_widget_set_fullscreen):
	* src/backend/bacon-video-widget.h:
	* src/totem-preferences.c (totem_setup_preferences):
	* src/totem-preferences.h:
	* src/totem.c (video_widget_create): Kill NVTV support,
	nv supports tv-out through XRandR for the G80 (GeForce 8000) and up,
	and nouveau for pretty much everything it supports
	(Closes: #473692)

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* src/totem-options.c (totem_options_process_for_server):
	* src/totem-options.h:
	* src/totem-private.h:
	* src/totem.c (totem_action_exit), (totem_action_volume_relative),
	(totem_action_volume_toggle_mute),
	(volume_button_value_changed_cb), (totem_action_remote):
	* src/totem.h: Add proper support for mute toggling through
	the remote interface, and add a command-line option for it
	(Closes: #554318)

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/jamendo/jamendo.glade:
	* src/plugins/jamendo/jamendo.py: Corrected previous
	commits, patch from David JEAN LOUIS <izimobil@gmail.com>

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: We also support SID files,
	patch from Robin Sonefors <ozamosi@flukkost.nu>
	(Closes: #559953)

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (on_eos_event):
	Fix repeat being ignored when playing back the stream
	from the disk and it is seekable (Closes: #557407)

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_init): Fix default zoom ratio being
	zero when using the web browser, and a single dot appearing
	as video
